# qcdloop

./: .gitignore  CMakeLists.txt  README.md
error_analysis/: README.md  coefficient_differences.py  coefficient_differences_ulp.py  csv_parser.py  plot_coefficient_errors.py  plot_ulp_differences.py
error_analysis/float/: csv_parser.py  plot_precision_analysis.py  precision_differences_ulp.py  update_precise_digits.py  visualize_error_regions.py
examples/: boxGPU_test.cc  bubbleGPU_test.cc  kokkos_test.cc  tadpoleGPU_test.cc  tadpole_gpu_test.cc  triangleGPU_test.cc
examples/box/: boxGPU_test_dd_B1.cc  boxGPU_test_dd_B10.cc  boxGPU_test_dd_B11.cc  boxGPU_test_dd_B12.cc  boxGPU_test_dd_B13.cc  boxGPU_test_dd_B14.cc  boxGPU_test_dd_B15.cc  boxGPU_test_dd_B16.cc  boxGPU_test_dd_B2.cc  boxGPU_test_dd_B3.cc  boxGPU_test_dd_B4.cc  boxGPU_test_dd_B5.cc  boxGPU_test_dd_B6.cc  boxGPU_test_dd_B7.cc  boxGPU_test_dd_B8.cc  boxGPU_test_dd_B9.cc  boxGPU_test_dd_BIN0.cc  boxGPU_test_dd_BIN1.cc  boxGPU_test_dd_BIN2.cc  boxGPU_test_dd_BIN3.cc  boxGPU_test_dd_BIN4.cc  boxGPU_test_quad_B1.cc  boxGPU_test_quad_B10.cc  boxGPU_test_quad_B11.cc  boxGPU_test_quad_B12.cc  boxGPU_test_quad_B13.cc  boxGPU_test_quad_B14.cc  boxGPU_test_quad_B15.cc  boxGPU_test_quad_B16.cc  boxGPU_test_quad_B2.cc  boxGPU_test_quad_B3.cc  boxGPU_test_quad_B4.cc  boxGPU_test_quad_B5.cc  boxGPU_test_quad_B6.cc  boxGPU_test_quad_B7.cc  boxGPU_test_quad_B8.cc  boxGPU_test_quad_B9.cc  boxGPU_test_quad_BIN0.cc  boxGPU_test_quad_BIN1.cc  boxGPU_test_quad_BIN2.cc  (+2 more)
scripts/: build_QCDLoops_Kokkos.sh  compile.sh  gen_dd_constants.cpp  outputLabels.txt  prepare.sh  reset.sh  run_gpu_batch_sweep.sh  test.py  unitTest.sh  validate.txt
src/: tadpole.cc  tadpoleGPU.cc
src/qcdloop/: boxGPU.h  bubbleGPU.h  dd_complex.hpp  dd_math.hpp  kokkosMaths.h  kokkosMaths_dd.h  kokkosMaths_quad.h  kokkosMaths_wrapper.h  kokkosUtils.h  quad_complex.hpp  quad_math.hpp  tadpole.h  tadpoleGPU.h  triangleGPU.h
src/qcdloop/box/: B0m.h  B1m.h  B2m.h  B3m.h  B4m.h  box_common.h
